# cyan

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  Rocket.toml  setup.sh  start.sh
cyan_api/: Cargo.toml
cyan_api/src/: main.rs  server.rs  str.rs  utils.rs
cyan_api/web/static/css/: application.css
cyan_api/web/static/scripts/: application.js
cyan_api/web/templates/: index.html
cyan_fs2/: Cargo.toml
cyan_fs2/src/: lib.rs  unix.rs  wasm.rs
cyan_nlg/: Cargo.toml  LICENSE
cyan_nlg/src/: bleu.rs  lib.rs  n_gram.rs  ngram.rs  rouge.rs  samples.rs  summarizer.rs  summary.rs  token.rs  tokenizer.rs  utils.rs
cyan_pwa/: Cargo.toml
cyan_pwa/src/: app.rs  lib.rs  main.rs
cyan_vis/: Cargo.toml
cyan_vis/src/: freq.rs  histogram.rs  lib.rs  ngram.rs  rouge.rs  token.rs  utils.rs
cyan_web/: cyan_pwa.js  cyan_pwa_bg.wasm  index.html
