# Forked from fs2-rs to fix target_family id error
[package]
name = "fs2"
version = "0.4.3"
authors = ["CK Vattes <cvatte1@wgu.edu>", "Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
#repository = "https://github.com/danburkert/fs2-rs"
#documentation = "https://docs.rs/fs2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.30"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winerror", "fileapi", "winbase", "std"] }
