[package]
name = "cyan_nlg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["CK Vattes <cvatte1@wgu.edu>"]

[dependencies]
rust-bert = "0.16.0"
#rust-bert = "0.7.12"
#tokenizers = "0.11.0"

[patch.crates-io]
getrandom = { version = "0.2.3", features = ["js"] } # Use js feature for wasm32 target
fs2 = { version = "0.4.3", path = "cyan_fs2" } # Fork fs2 to fix target_family id error
