[package]
name = "cyan_nlg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["CK Vattes <cvatte1@wgu.edu>"]

[dependencies]
futures = "0.3.19"
rust-bert = "0.16.0"
serde = "1.0.132"
serde_json = "1.0.73"
tokenizers = "0.11.0"
tokio = { version = "1.15.0", features = ["macros"] }
